<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GermanyRank1"
    android:background="#161617">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome to
            Germany rank I"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="#232324"
            android:textColor="#dee2e6"
            android:textSize="40sp"
            android:layout_marginBottom="20dp"/>
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/pz_35_t_redirect"
            app:srcCompat="@drawable/pz_35_t"
            android:layout_marginBottom="20dp"
            android:onClick="gotoPz35t"/>
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/pz_iii_e_redirect"
            app:srcCompat="@drawable/pz_3_e"
            android:layout_marginBottom="20dp"
            android:onClick="gotoPz3E"/>
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/pz_iii_b_redirect"
            app:srcCompat="@drawable/pz_3_b"
            android:layout_marginBottom="20dp"
            android:onClick="gotoPz3B"/>
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/pz_38_t_a_redirect"
            app:srcCompat="@drawable/pz_38_t_a"
            android:layout_marginBottom="20dp"
            android:onClick="gotoPz38tA"/>
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/pz_iii_f_redirect"
            app:srcCompat="@drawable/pz_3_f"
            android:layout_marginBottom="20dp"
            android:onClick="gotoPz3F"/>
    </LinearLayout>

</ScrollView>