<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WikiSelect"
    android:background="#161617">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome to
            Thunder Wiki"
                android:textStyle="bold"
                android:textAlignment="center"
                android:background="#232324"
                android:textColor="#dee2e6"
                android:textSize="40sp"
                android:layout_marginBottom="20dp"/>
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/ground_wiki_redirect"
                app:srcCompat="@drawable/ground_veh"
                android:layout_marginBottom="20dp"
                android:onClick="gotoGround"/>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/air_wiki_redirect"
                app:srcCompat="@drawable/air_veh"
                android:layout_marginBottom="20dp" />
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/heli_wiki_redirect"
                app:srcCompat="@drawable/heli_veh"
                android:layout_marginBottom="20dp" />
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/fleet_wiki_redirect"
                app:srcCompat="@drawable/fleet_veh"
                android:layout_marginBottom="20dp" />
        </LinearLayout>

    </ScrollView>